# Samples_Gazebo_ROS

./: .gitignore  GameContollersButtonsAxesMap.md  README.md  __GameContollersButtonsAxesMap.md  cleanup  setup.bash
models/: centaur  clone_all_robots  clone_sdf  crawler_robot  crawler_robot_ros  fourlegs  fourlegs_wheeled  pioneer2dx_ros  pioneer3at_ros  quadrotor  spring  twoLinkArm  twolinkarm
models/box_hot/: HOT-BOX.dae  model.config  model.sdf
models/box_pink/: PINK-BOX.dae  model.config  model.sdf
models/camera_gazebo/: model.config  model.sdf
models/camera_ros/: model.config  model.sdf
models/camera_ros0/: model.sdf
models/camera_ros1/: model.sdf
models/camera_ros2/: model.config  model.sdf
models/camera_ros3/: model.sdf
models/centaur/: model.config  model.sdf
models/centaur0/: model.config  model.sdf
models/centaur1/: LICENSE.txt  model.config  model.sdf
models/centaur1/meshes/: wrist_yaw_left_mod.stl
models/centaur2/: model.config  model.sdf
models/centaur3/: model.config  model.sdf
models/centaur3/meshes/: chest.stl  l_f1_link_0.stl  r_f1_link_1.stl  r_palm.stl  shoulder_pitch_left.stl  shoulder_yaw_left2.stl
models/crawler_robot/: Inertial_WheelR21L29.txt  model.sdf
models/crawler_robot_ros/: model.sdf
models/crawler_robot_ros/dae/: arm_crawler_2.dae
models/crawler_robot_ros0/: Inertial_Arm.txt  Inertial_Wheel.fcstd  Inertial_WheelR50L50.txt  model.sdf
models/crawler_robot_ros1/: model.sdf
models/crawler_robot_ros2/: Inertial_Arm.fcstd  Inertial_WheelR50L100.txt  model.sdf
models/crawler_robot_ros3/: crawler_robot_just_pysdfed.urdf  model.sdf
models/fourlegs/: model.config  model.sdf  model_inertialed.sdf  model_inertialed_20171027_210000.sdf  model_inertialed_damping.sdf  model_inertialed_v1.sdf  model_inertialed_v2.sdf
models/fourlegs/parts/: Body.blend  Body.dae  (+16 more)
models/hokuyo_gazebo/: Inertial_TopBase.txt  model.config  model.sdf
models/hokuyo_ros/: Inertial_TopBase.fcstd  model.config  model.sdf
models/hokuyo_ros0/: model.sdf
models/hokuyo_ros1/: model.sdf
models/hokuyo_ros2/: model.sdf
models/hokuyo_ros3/: model.config  model.sdf
models/pioneer2dx_ros/: model.sdf
models/pioneer2dx_ros0/: model.config  model.sdf
models/pioneer2dx_ros1/: model.config  model.sdf
models/pioneer2dx_ros2/: model.config  model.sdf
models/pioneer2dx_ros3/: model.config  model.sdf
models/pioneer3at_ros/: model.sdf
models/pioneer3at_ros0/: model.config  model.sdf
models/pioneer3at_ros1/: model.config  model.sdf
models/pioneer3at_ros2/: model.config  model.sdf
models/pioneer3at_ros3/: model.config  model.sdf
models/quadrotor/: model.sdf
models/quadrotor0/: model.config  model.sdf
models/quadrotor1/: model.config  model.sdf
models/quadrotor2/: model.config  model.sdf
models/quadrotor3/: model.config  model.sdf
models/spring/: model.sdf
models/twoLinkArm/: Base.stl  model.sdf
src/: .rosinstall
src/centaur/: CMakeLists.txt  README.md  package.xml  setup.py
src/centaur/config/: centaur_default_controllers.yaml  centaur_joint_goal.yaml  centaur_joint_limits.yaml  vt_hand_left_controllers.yaml  vt_hand_left_trajectory_sim_controllers.yaml  vt_hand_right_trajectory_controllers.yaml  vt_hand_right_trajectory_sim_controllers.yaml
src/centaur/config/centaur/: centaur_thor_mang_hand_parameters.yaml  frames.gv  vt_hand_left_trajectory_controllers.yaml  vt_hand_right_controllers.yaml
src/centaur/config/centaur_nouse_original_yaml/: self_filter_centaur_default.yaml
src/centaur/launch/: centaur.launch  centaur4.launch  centaur_joint_trajectory.launch  make_robot_description_and_call_state_publisher_centaur.launch
src/centaur/meshes/: l_f1_link_1.stl
src/centaur/meshes/centaur/: l_f0_link_1.stl  pelvis.stl  r_f0_link_1.stl
src/centaur/sdf/: model.sdf  modelRNS.sdf
src/centaur/sdf/meshes/: elbow_left_mod2.stl  neck.stl  shoulder_roll_left2.stl  waist.stl  wrist_roll_left_mod2.stl
src/centaur/src/: centaur_init_pose.cpp
src/centaur/urdf/: centaur.sdf  centaur.urdf
src/centaur/worlds/: centaur.world  centaur4.world
src/crawler_robot/: CMakeLists.txt  README.md  package.xml
src/crawler_robot/launch/: spawn_crawler_robot.launch
src/crawler_robot/sdf/: model.config  model.sdf
src/crawler_robot/src/: crawler_flipper.cc  flipper_control_msgs.hh  teleop_crawler_robot.cc
src/crawler_robot/src/msgs/: CMakeLists.txt  flipper_control.proto
src/crawler_robot/worlds/: crawler_robot.world
src/crawler_robot_ros/: CMakeLists.txt  README.md  package.xml  setup.py
src/fourlegs/: CMakeLists.txt  README.md  package.xml
src/fourlegs/launch/: spawn_fourlegs.launch
src/fourlegs/sdf/: model_inertialed.sdf
src/fourlegs/src/: Motion.cc  Motion.hh  QuadrupedMotion.cc  QuadrupedMotion.hh  gzIntervalTimer.hh  my_defs.h
src/fourlegs/worlds/: fourlegs.world
src/fourlegs_wheeled/: CMakeLists.txt  README.md  package.xml
src/gzPluginUtils/: CMakeLists.txt  package.xml
src/hector_gazebo_thermal_camera/: CMakeLists.txt  README.md
src/hector_gazebo_thermal_camera_pink/: CMakeLists.txt  package.xml
src/hector_quadrotor_gazebo_plugins/: CMakeLists.txt
src/pioneer2dx_ros/: CMakeLists.txt  README.md  nodes  package.xml  pioneer2dx_ros.rviz  setup.py
src/pioneer3at_ros/: CMakeLists.txt  README.md  package.xml  setup.py
src/pioneer3at_ros/launch/: make_robot_description_and_call_state_publisher_pioneer3at.launch  spawn_pioneer3at_ros.launch  spawn_pioneer3at_ros4.launch
src/pioneer3at_ros/nodes/: my_teleop_twist_keyboard.py
src/pioneer3at_ros/sdf/: model.config  model.sdf  pioneer3at_ros_justpysdfed.urdf
src/pioneer3at_ros/sdf/meshes/: chassis_g.dae  chassis_y.blend  chassis_y.dae
src/pioneer3at_ros/urdf/: pioneer3at_ros.sdf  pioneer3at_ros.urdf  transmission_sample.urdf
src/pioneer3at_ros/worlds/: pioneer3at_ros.world  pioneer3at_ros4.world
src/quadrotor/: CMakeLists.txt  README.md  package.xml  setup.py
src/rubbles/: CMakeLists.txt  README.md  package.xml
src/spring/: CMakeLists.txt  LICENSE  README.md  package.xml
src/twolinkarm/: CMakeLists.txt  README.md  package.xml
(+114 files in other folders)
